=== HEAD

* Deprecate Model hook class methods, use instance methods instead or Model.plugin :hook_class_methods (jeremyevans)

* Deprecate Model.set_sti_key, use Model.plugin :single_table_inheritance (jeremyevans)

* Deprecate Model.set_cache, use Model.plugin :caching (jeremyevans)

* Move most model instance methods into Model::InstanceMethods, for easier overriding of instance methods for all models (jeremyevans)

* Move most model class methods into Model::ClassMethods, for easier overriding of class methods for all models (jeremyevans)

* Deprecate String#to_date, #to_datetime, #to_time, and #to_sequel_time, use require 'sequel/extensions/string_date_time' if you want them (jeremyevans)

* Deprecate Array#extract_options! and Object#is_one_of? (jeremyevans)

* Deprecate Object#meta_def, #meta_eval, and #metaclass (jeremyevans)

* Deprecate Module#class_def, #class_attr_overridable, #class_attr_reader, #metaalias, #metaattr_reader, and #metaatt_accessor (jeremyevans)

* Speed up the calling of most column accessor methods, and reduce memory overhead of creating them (jeremyevans)

* Deprecate Model#set_restricted using Model#[] if no setter method exists, a symbol is used, and the columns are not set (jeremyevans)

* Deprecate Model#set_with_params and #update_with_params (jeremyevans)

* Deprecate Model#save!, use Model.save(:validate=>false) (jeremyevans)

* Deprecate Model#dataset (jeremyevans)

* Deprecate Model.is and Model.is_a, use Model.plugin for plugins (jeremyevans)

* Deprecate Model.str_columns, Model#str_columns, #set_values, #update_values (jeremyevans)

* Deprecate Model.delete_all, .destroy_all, .size, .uniq, and .import (jeremyevans)

* Copy all current dataset options when calling Model.db= (jeremyevans)

* Deprecate Model.belongs_to, Model.has_many, and Model.has_and_belongs_to_many (jeremyevans)

* Remove SQL::SpecificExpression, have subclasses inherit from SQL::Expression instead (jeremyevans)
