@@ -11,7 +11,7 @@ end
 Sequel.virtual_row_instance_eval = true
 
 extensions = %w'string_date_time'
-plugins = {:hook_class_methods=>[]}
+plugins = {:hook_class_methods=>[], :schema=>[]}
 
 extensions.each{|e| require "sequel/extensions/#{e}"}
 plugins.each{|p, opts| Sequel::Model.plugin(p, *opts)}
